// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(components) atoms/button take anchor button's snap shot 1`] = `
<div>
  <a
    class="twin-1fs6bgp-ButtonBox ewpnij50"
    role="button"
  >
    <p
      class="twin-i22tqs-Text-Button e8xjir80"
    >
      This is test
    </p>
  </a>
</div>
`;

exports[`(components) atoms/button take default button's snap shot 1`] = `
<div>
  <button
    class="twin-1fs6bgp-ButtonBox ewpnij50"
  >
    <p
      class="twin-i22tqs-Text-Button e8xjir80"
    >
      This is test
    </p>
  </button>
</div>
`;
